# Ugra

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: ugra-agents.mdc  ugra-ai-core.mdc  ugra-core.mdc  ugra-llm.mdc  ugra-personality.mdc
backend/: Dockerfile
backend/prompts/: learning_agent.md  personality.md  resume_agent.md
backend/prompts/career_agent/: v1.yaml
backend/prompts/cognition/: v1.yaml
backend/prompts/learning_agent/: v1.yaml
backend/src/ugra/: __init__.py  main.py
backend/tests/support/: stubs.py
backend/tests/unit/: test_candidate_profile.py  test_cover_letter_fallback.py  test_domain.py  test_intelligence_core.py  test_orchestrator.py  test_resume_fallback.py  test_ui_persistence.py
docs/: README.md  agents.md  ai-core.md  api.md  architecture.md  events.md  intelligence-core.md  llm-providers.md  memory-and-goals.md  personality.md  tools.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.local.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ApplicationsPage.tsx  CoverLettersPage.tsx  DashboardPage.tsx  JobsPage.tsx  LogsPage.tsx  ResumesPage.tsx  SettingsPage.tsx  SourcesPage.tsx
frontend/src/stores/: theme.tsx  toast.tsx
infrastructure/otel/: otel-collector.yml
infrastructure/prometheus/: prometheus.yml
kubernetes/: deployment.yaml
prompts/: career_agent.md  cover_letter_agent.md  interview_agent.md
prompts/cover_letter_agent/: v1.yaml
prompts/interview_agent/: v1.yaml
prompts/resume_agent/: v1.yaml
scripts/: split_character_assets.py
src/ugra/: main.py
tests/unit/: test_ai_core.py  test_intelligence_core.py  test_learning_agent.py  test_orchestrator.py
(+109 files in other folders)
