[project]
name = "ugra"
version = "0.1.0"
description = "Ugra — AI Workforce Platform for professional career development"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.14",
    "sentence-transformers>=3.3.1",
    "httpx>=0.28.0",
    "aiogram>=3.15.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
    "dependency-injector>=4.43.0",
    "pyyaml>=6.0.2",
    "psutil>=6.1.0",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
ugra-bot = "ugra.presentation.telegram.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["backend/src"]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/ugra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend/src", "backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["backend/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
